--- a/24 - Sticky Nav/style-START.css
+++ b/24 - Sticky Nav/style-START.css
@@ -25,10 +25,14 @@ body {
   transition: transform 0.5s;
 }
 
+.fixed-nav .site-wrap {
+  transform: scale(1.2);
+}
+
 header {
   text-align: center;
   height: 50vh;
-  background: url(http://wes.io/iEgP/wow-so-deep.jpg) bottom center no-repeat;
+  background: url(https://source.unsplash.com/7bwQXzbF6KE/800x500) bottom center no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -50,6 +54,11 @@ nav {
   z-index: 1;
 }
 
+.fixed-nav nav{
+  position: fixed;
+  box-shadow: 0 5px rgba(0,0,0,0.1)
+}
+
 nav ul {
   margin: 0;
   padding:0;
@@ -69,9 +78,13 @@ li.logo {
   max-width: 0;
   overflow: hidden;
   background: white;
-  transition: all .5s;
+  transition: all .8s;
   font-weight: 600;
   font-size: 30px;
+}
+
+.fixed-nav li.logo{
+  max-width: 500px
 }
 
 li.logo a {
